feature: new snippet panel for all files; move PlantUML snippets to the global snippet panel.